<resources>
    <!-- #################### dialog Text #################### -->
    <!-- common -->
    <string name="app_name">WILL</string>
    <string name="group">그룹</string>
    <string name="calendar_date">날짜</string>
    <string name="start_date">시작 날짜</string>
    <string name="end_date">종료 날짜</string>
    <string name="done_date">완료 날짜</string>
    <string name="loop">반복</string>
    <string name="achievement_days">연속 %1$d일 달성</string>
    <string name="successful_delete">삭제되었습니다.</string>
    <string name="successful_movement">그룹을 변경하였습니다.</string>
    <!-- ~common -->

    <!-- setting -->
    <string name="action_settings">Settings</string>
    <string name="alarm_settings_title">알람</string>
    <string name="alarm_settings_msg">매일 오전 9시 미완료 할일을 알려드립니다.</string>
    <!-- ~setting -->

    <!-- main -->
    <string name="terminate_msg">WILL을 종료하시겠습니까?</string>
    <string name="not_exsist_list">오늘의 할 일이 존재하지 않습니다.</string>
    <!-- ~main-->

    <!-- detail -->
    <string name="week_achievement_rate">주간 달성</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="location">위치</string>
    <string name="no_location">위치 없음</string>
    <string name="item_modify">수정</string>
    <string name="item_delete">삭제</string>
    <string name="delete_msg">삭제하시겠습니까?</string>
    <string name="move_msg">그룹을 변경하시겠습니까?</string>
    <string name="copy_msg">클립보드에 복사되었습니다.</string>
    <!-- ~detail -->

    <!-- search -->
    <string name="search_hint">할 일 이름을 검색하십시오.</string>
    <string name="all">전체</string>
    <string name="no_group">그룹미정</string>
    <string name="done">완료</string>
    <string name="not_done">미완료</string>
    <string name="not_loop">반복하지 않음</string>

    <string name="period">기간</string>
    <string name="tilde">~</string>
    <string name="start_of_start_date_text">시작 날짜의 처음</string>
    <string name="end_of_start_date_text">시작 날짜의 끝</string>
    <string name="start_of_end_date_text">종료 날짜의 처음</string>
    <string name="end_of_end_date_text">종료 날짜의 끝</string>
    <string name="start_of_done_date_text">완료 날짜의 처음</string>
    <string name="end_of_done_date_text">완료 날짜의 끝</string>
    <string name="date_error">날짜의 범위가 적절하지 않습니다.</string>

    <string name="distance_text">여기서 %1$d%2$s 이내</string>
    <!-- ~search -->

    <!-- navigation drawer -->
    <string name="group_setting">그룹관리</string>
    <string name="task_setting">할일관리</string>
    <string name="alarm_setting">알람관리</string>
    <string name="copyright">© 2020 Willy All Rights Reserved</string>
    <!-- ~navigation drawer -->

    <!-- group management -->
    <string name="group_name_hint">그룹 이름을 작성하십시오.</string>
    <string name="no_group_color_text">그룹 색상을 선택하십시오.</string>
    <!-- ~group management -->

    <!-- task management -->
    <string name="no_checked_task">항목을 체크하십시오.</string>
    <!-- ~task management -->
    <!-- #################### ~dialog Text #################### -->

    <!-- #################### value #################### -->
    <!-- extra names of Intent -->
    <string name="current_date_key">currentDate</string>
    <string name="current_group_key">currentGroup</string>
    <string name="selected_groups_key">selectedGroups</string>
    <string name="selected_done_key">selectedDone</string>
    <string name="selected_loop_key">selectedLoop</string>
    <string name="start_of_start_date_key">startOfStartDate</string>
    <string name="end_of_start_date_key">endOfStartDate</string>
    <string name="start_of_end_date_key">startOfEndDate</string>
    <string name="end_of_end_date_key">endOfEndDate</string>
    <string name="only_done_key">onlyDone</string>
    <string name="start_of_done_date_key">startOfDoneDate</string>
    <string name="end_of_done_date_key">endOfDoneDate</string>
    <string name="selected_group_from_main">Group</string>
    <string name="item_id">itemId</string>
    <string name="selected_tasks_key">selectedTaskKeys</string>
    <string name="group_setting_key">groupSettingKey</string>
    <string name="group_color_setting_key">groupColorSettingKey</string>
    <string name="group_removal_key">groupRemovalKey</string>
    <string name="location_search_key">locationSearchKey</string>
    <string name="selected_item_key">modifiedItemKey</string>
    <string name="modified_item_key">modifiedItemKey</string>
    <!-- ~extra names of Intent -->

    <!-- selection id for recycler view -->
    <string name="selection_id_main">selectionIdMain</string>
    <string name="selection_id_search">SearchSelection</string>
    <string name="selection_id_group_search_setting">groupSearchSettingSelection</string>
    <string name="selection_id_done_search_setting">doneSearchSettingSelection</string>
    <string name="selection_id_loop_search_setting">loopSearchSettingSelection</string>
    <string name="selection_id_group_management">groupManagementSelection</string>
    <string name="selection_id_task_management">taskManagementSelection</string>
    <string name="selection_id_location">locationSelection</string>
    <!-- ~selection id for recycler view -->

    <!-- startActivityForResult -->
    <string name="request_code">requestCode</string>
    <string name="location_search_code">locationSearchCode</string>
    <!-- ~startActivityForResult -->

    <!-- distance -->
    <string name="unit_short">m</string>
    <string name="unit_long">km</string>
    <!-- ~distance -->

    <!-- group color -->
    <string name="group_color_view_name">color</string>
    <string name="group_color_name">colorGroup</string>
    <!-- ~group color -->
    <!-- #################### ~value #################### -->

    <!-- add text -->
    <string name="edit_Title">새로운 할일을 입력해주세요</string>
    <string name="btn_color">color</string>
    <string name="edit_Group">그룹명</string>
    <string name="Date">0000-00-00</string>
    <string name="start_date_text">시작날짜</string>
    <string name="end_date_text">종료날짜</string>
    <string name="start_date_key">startDate</string>
    <string name="end_date_key">endDate</string>
    <string name="location_placeholder">장소명으로 검색</string>
    <string name="calendar_item_is_null">일정이 없습니다</string>
    <string name="item_name_is_null">할 일 이름을 입력해 주십시오</string>
    <string name="item_date_mismatch">날짜를 다시 입력해 주십시오</string>
    <string name="First">중요도1</string>
    <string name="Second">중요도2</string>
    <string name="Third">중요도3</string>
    <string name="empty">중요도4</string>
    <!-- add text -->

</resources>
