<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    android:verticalScrollbarPosition="right"
    tools:context=".add.view.AddItemActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        style="@style/TopBarStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/AddScrollView">

        <ImageButton
            android:id="@+id/back_button"
            style="@style/BackButtonStyle"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="Tomain" />

        <ImageButton
            android:id="@+id/submit_button"
            style="@style/TopBarButtonStyle"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:foreground="@drawable/ic_rounded_check_24px"
            android:foregroundTint="@color/colorPrimary"
            android:onClick="add_insert" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/AddScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout3"
                style="@style/TopLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/Title_editText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:hint="@string/edit_Title"
                        android:inputType="textPersonName"
                        android:textSize="20dp" />

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_thick_height">

                    <TextView
                        android:id="@+id/important_Vire"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        style="@style/DetailTitleStyle"
                        android:text="중요도" />

                    <Spinner
                        android:id="@+id/important"
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="-11dp"
                        android:entries="@array/important"
                        android:text="중요도" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/detail_list_thick_height"
                    android:onClick="bringUpGroupSetting">

                    <TextView
                        android:id="@+id/group_title"
                        style="@style/DetailTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="그룹" />

                    <TextView
                        android:id="@+id/group_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@id/group_title"
                        android:gravity="right|center_vertical"
                        android:singleLine="true"
                        android:text="그룹 미정"
                        android:paddingRight="15dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="-8dp"
                        android:src="@drawable/bt_next" />

                </RelativeLayout>
            </LinearLayout>


                <LinearLayout
                    android:id="@+id/date_and_location_layout"
                    style="@style/RoundLayout"
                    android:layout_marginBottom="@dimen/basic_margin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_list_thick_height"
                        android:onClick="setStart">

                        <TextView
                            android:id="@+id/btn_start"
                            style="@style/DetailTitleStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/start_date"/>

                        <TextView
                            android:id="@+id/Text_start"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:gravity="center_vertical"
                            android:hint="@string/Date"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_list_thick_height"
                        android:onClick="setEnd">

                        <TextView
                            android:id="@+id/btn_end"
                            style="@style/DetailTitleStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/end_date"/>

                        <TextView
                            android:id="@+id/Text_end"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:gravity="center_vertical"
                            android:hint="@string/Date"/>

                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="64dp"
                        android:onClick="bringUplocationSearch">

                        <TextView
                            android:id="@+id/btn_Location"
                            style="@style/DetailTitleStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/location"/>

                        <TextView
                            android:id="@+id/place_name"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="right|center_vertical"
                            android:singleLine="true"
                            android:text="@string/no_location"
                            android:layout_toEndOf="@id/btn_Location"
                            android:layout_alignParentEnd="true"
                            android:paddingRight="15dp"/>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:layout_marginEnd="-8dp"
                            android:src="@drawable/bt_next" />
                    </RelativeLayout>


                </LinearLayout>

            <LinearLayout
                android:id="@+id/loop_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                style="@style/BottomLayout">

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_thick_height">

                    <TextView
                        style="@style/DetailTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:text="반복"/>

                    <Switch
                        android:id="@+id/repeat_switch"
                        style="@style/DetailTitleStyle"
                        android:layout_width="100dp"
                        android:layout_height="@dimen/detail_list_thick_height"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/checkBox_group"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <CheckBox
                        style="@style/DetailDayStyle"
                        android:id="@+id/day0"
                        android:background="@drawable/bt_achievement"
                        android:button="@android:color/transparent"
                        android:text="@string/sunday" />

                    <CheckBox
                        style="@style/DetailDayStyle"
                        android:id="@+id/day1"
                        android:background="@drawable/bt_achievement"
                        android:button="@android:color/transparent"
                        android:text="@string/monday" />

                    <CheckBox
                        style="@style/DetailDayStyle"
                        android:id="@+id/day2"
                        android:background="@drawable/bt_achievement"
                        android:button="@android:color/transparent"
                        android:text="@string/tuesday" />

                    <CheckBox
                        style="@style/DetailDayStyle"
                        android:id="@+id/day3"
                        android:background="@drawable/bt_achievement"
                        android:button="@android:color/transparent"
                        android:text="@string/wednesday" />

                    <CheckBox
                        style="@style/DetailDayStyle"
                        android:id="@+id/day4"
                        android:background="@drawable/bt_achievement"
                        android:button="@android:color/transparent"
                        android:text="@string/thursday" />

                    <CheckBox
                        style="@style/DetailDayStyle"
                        android:id="@+id/day5"
                        android:background="@drawable/bt_achievement"
                        android:button="@android:color/transparent"
                        android:text="@string/friday" />

                    <CheckBox
                        style="@style/DetailDayStyle"
                        android:id="@+id/day6"
                        android:background="@drawable/bt_achievement"
                        android:button="@android:color/transparent"
                        android:text="@string/saturday" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>

