<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryBackground"
    tools:context=".detail.view.DetailActivity">

    <RelativeLayout
        android:id="@+id/action_bar"
        style="@style/TopBarStyle"
        app:layout_constraintBottom_toTopOf="@id/scroll_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_button"
            style="@style/BackButtonStyle"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:onClick="backToMain" />

        <ImageButton
            android:id="@+id/edit_button"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            style="@style/TopBarButtonStyle"
            android:layout_marginLeft="@dimen/basic_margin"
            android:foreground="@drawable/bt_edit"
            android:onClick="openOptionMenu" />

    </RelativeLayout>



    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/action_bar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">

            <LinearLayout
                android:id="@+id/item_area"
                style="@style/TopLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_list_thick_height"
                android:orientation="horizontal"
                android:padding="@dimen/detail_list_padding"
                app:layout_constraintBottom_toTopOf="@+id/group_area"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent">

                <ImageView
                    android:id="@+id/important"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical" />

                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    style="@style/DetailTitleStyle"
                    android:text="프로그래머스_정렬 문제 풀기" />

            </LinearLayout> <!--end item_area-->

            <!--end group_area-->

            <RelativeLayout
                android:id="@+id/group_area"
                style="@style/RoundLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_list_thick_height"
                android:orientation="horizontal"
                android:padding="@dimen/detail_list_padding"
                android:layout_marginBottom="@dimen/basic_margin"
                app:layout_constraintBottom_toTopOf="@+id/date_area"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_area">

                <TextView
                    style="@style/DetailTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/group" />

                <ImageView
                    android:id="@+id/group_color"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@id/group_name"
                    android:layout_gravity="center_vertical"
                    android:layerType="software"
                    android:src="@drawable/group_color"
                    android:state_activated="true"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/group_name"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:paddingLeft="25dp"
                    android:text="취업준비"
                    app:layout_constraintEnd_toEndOf="parent" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/date_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/basic_margin"
                android:orientation="vertical"
                style="@style/RoundLayout"
                android:padding="@dimen/detail_list_padding"
                app:layout_constraintBottom_toTopOf="@+id/end_date_area"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/group_area">

                <RelativeLayout
                    android:id="@+id/start_date_area"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_thick_height">

                    <TextView
                        style="@style/DetailTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/start_date"/>

                    <TextView
                        android:id="@+id/start_date"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:gravity="center_vertical"
                        android:text="2020-01-31" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/end_date_area"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_thick_height"
                    app:layout_constraintBottom_toTopOf="@+id/done_date_area"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/start_date_area">

                    <TextView
                        style="@style/DetailTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/end_date" />

                    <TextView
                        android:id="@+id/end_date"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:gravity="center_vertical"
                        android:text="2020-01-31" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/done_date_area"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_thick_height"
                    app:layout_constraintBottom_toTopOf="@+id/loof_area"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/end_date_area">

                    <TextView
                        style="@style/DetailTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/done_date" />

                    <TextView
                        android:id="@+id/done_date"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:gravity="center_vertical"
                        android:text="2020-01-31" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/loof_area"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_thick_height"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/done_date_area">

                    <TextView
                        style="@style/DetailTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/loop" />

                    <TextView
                        android:id="@+id/loof"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:gravity="center_vertical"
                        android:text="2020-01-31" />

                </RelativeLayout>

            </LinearLayout> <!--end date_area-->

            <LinearLayout
                android:id="@+id/achievement_rate_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/detail_list_padding"
                style="@style/RoundLayout">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/DetailTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/detail_list_thick_height"
                        android:text="@string/week_achievement_rate"/>

                    <TextView
                        android:id="@+id/achievement_rate"
                        style="@style/DetailTitleStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/detail_list_thick_height"
                        android:layout_alignParentRight="true"
                        android:text="85%"/>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/day_area"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/detail_list_padding">

                    <TextView
                        android:id="@+id/sunday"
                        style="@style/DetailDayStyle"
                        android:text="@string/sunday" />

                    <TextView
                        android:id="@+id/monday"
                        style="@style/DetailDayStyle"
                        android:text="@string/monday" />

                    <TextView
                        android:id="@+id/tuesday"
                        style="@style/DetailDayStyle"
                        android:text="@string/tuesday" />

                    <TextView
                        android:id="@+id/wednesday"
                        style="@style/DetailDayStyle"
                        android:text="@string/wednesday" />

                    <TextView
                        android:id="@+id/thursday"
                        style="@style/DetailDayStyle"
                        android:text="@string/thursday" />

                    <TextView
                        android:id="@+id/friday"
                        style="@style/DetailDayStyle"
                        android:text="@string/friday" />

                    <TextView
                        android:id="@+id/saturday"
                        style="@style/DetailDayStyle"
                        android:text="@string/saturday" />

                </LinearLayout>

            </LinearLayout> <!--end achievement_rate_area-->

            <LinearLayout
                android:id="@+id/location_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/detail_list_padding"
                style="@style/BottomLayout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/achievement_rate_area">

                <TextView
                    style="@style/DetailTitleStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_list_thick_height"
                    android:text="@string/location" />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="서울 강남구 강남대로 지하 396" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/map_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="20dp" />

                </RelativeLayout>

            </LinearLayout> <!-- end locationArea-->

        </LinearLayout> <!--scrollview direct child -->

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
